# HRIS

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env  .env.example  .gitignore  admin_seed.py  create_tables.py  generate_hash.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4d5fbed54361_baseline_schema.py  4fb657f308e2_add_refresh_tokens_table.py  50cbfb403b55_add_inventory_module.py  57dd2f2a5489_add_assignment_projects_join_table.py  5bdaf3838e28_add_missing_tenant_id_column_to_.py  60caac406d2b_add_password_reset_tokens_table.py  6cda829d616d_add_audit_logs_table.py  7ad52b3dc7cb_add_notifications_table.py  82c521500038_add_voucher_document_model.py  846307f846aa_add_tally_style_vouchers_cost_centers_.py  96a70f1ad06c_add_audit_log_ip_user_agent_severity.py  9b674bc42feb_add_composite_indexes_for_hot_query_.py  9d2e64c3bb12_add_project_progress_and_resource_.py  b0cc45a150d5_add_unique_constraints_for_business_.py  b32672f8ffd1_make_employee_user_id_nullable.py  c289fb8f050e_make_assignment_project_id_nullable.py  d64d124a32fa_add_project_members_table.py  eb264d008f35_add_ledger_groups.py  f0c03dd3b0c9_add_budget_management.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: audit.py  budget_service.py  config.py  dependencies.py  email.py  inventory_service.py  limiter.py  location.py  logging_config.py  notifications.py  scheduler.py  security.py  voucher_service.py
backend/app/models/: __init__.py  accounting.py  assignment.py  assignment_project.py  (+21 more)
(+105 files in other folders)
