[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.138.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.12",
    "python-jose[cryptography]>=3.5.0",
    "pytz>=2026.2",
    "sqlalchemy>=2.0.51",
]
